changed about me and added an underline

--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
                 and have brought my creations to life through 3D printing. Additionally, I've delved into the
                 fascinating world of LoRa, harnessing its potential for long-range, low-power wireless communication.
                 Join me as I share my projects, knowledge, and insights in this ever-evolving digital landscape!</p>
-            <p>Feel free to <a href="#contact-me">contact</a> me if you have any questions or if you want to collaborate
-                on a project.</p>
+            <p>If you're interested in my skillset <a href="#contact-me">contact me here</a></p>
 
         </section>
 
